# femdesign-api

./: .gitignore  README.md
FemDesign.Core/: FemDesign.Core.csproj
FemDesign.Core/AuxiliaryResults/: LabelledSectionsGeometry.cs
FemDesign.Core/Bars/: Bar.cs
FemDesign.Core/Calculate/: CmdDesignGroup.cs  FdScriptHeader.cs  Options.cs
FemDesign.Core/Composites/: CompositeSection.cs
FemDesign.Core/ErrorHandling/: ErrorHandling.cs
FemDesign.Core/Foundations/: Foundations.cs  Insulation.cs  RefParts.cs  SlabFoundation.cs
FemDesign.Core/Geometry/: Contour.cs  Region.cs
FemDesign.Core/Loads/Load groups/: LoadGroupTemporary.cs
FemDesign.Core/Model/: Model.cs
FemDesign.Core/Properties/: GlobalAssemblyInfo.cs
FemDesign.Core/Results/: QuantityEstimation.cs
FemDesign.Core/Shells/: EdgeConnection.cs  Slab.cs
FemDesign.Examples/: README.md
FemDesign.Examples/Python/jupyter-notebook/: model.str  model.struxml  report.ipynb
FemDesign.Examples/Python/read-results/: model.str  model.strFEM  read-results.py
FemDesign.Examples/Python/run-analysis/: run_analysis.py
FemDesign.Examples/Python/run-batch/: run_batch.py
FemDesign.Examples/Python/run-fdscript/: run_fdscript.py
FemDesign.Grasshopper/: FemDesign.Grasshopper.csproj
FemDesign.Grasshopper/Calculate/: ApplicationRun.cs
FemDesign.Grasshopper/Foundations/: Insulation.cs  IsolatedFoundation.cs  SlabFoundation.cs
FemDesign.Grasshopper/Properties/: Resources.Designer.cs  Resources.resx
FemDesign.Grasshopper/Sections/Composite/: CompositeSectionDefine_OBSOLETE2308.cs
FemDesign.Python/: program.py
FemDesign.Python/femdesign/: comunication.py
FemDesign.Python/packaging/: README.md  pyproject.toml
FemDesign.Python/packaging/src/FEM_Design.egg-info/: PKG-INFO
FemDesign.Python/packaging/src/fem_design.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
FemDesign.Python/packaging/src/femdesign/: comunication.py
FemDesign.Python/packaging/src/femdesign/calculate/: command.py  fdscript.py
FemDesign.Python/test/: test_analysis.py  test_command.py  test_pipe.py
FemDesign.Tests/Calculate/: FdscriptTests.cs
(+28 files in other folders)
