[project]
name = "FEM-Design"
version = "0.0.1"
authors = [
  { name="FEM-Design", email="femdesign.api@strusoft.com" },
]
description = ""
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft",
]

[project.urls]
Homepage = "https://femdesign-api-docs.onstrusoft.com"
Issues = "https://github.com/strusoft/femdesign-api/issues"