[project]
name = "FEM-Design"
version = "0.0.2"
authors = [
  { name="FEM-Design", email="femdesign.api@strusoft.com" },
]
maintainers = [
  {name = "Marco Pellegrino", email = "marco.pellegrino@strusoft.com"}
]
description = "The FEM-Design API package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft",
]
keywords = ["fem", "fea", "structures", "strusoft", "FEM-Design API"]

[project.urls]
Homepage = "https://femdesign-api-docs.onstrusoft.com"
Repository = "https://github.com/strusoft/femdesign-api"
Issues = "https://github.com/strusoft/femdesign-api/issues"